--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,33 @@
 <body>
     <center>
 
-        <h1>Hello from node & express server</h1>
+        <h1>Herkkuja</h1>
         <div id="sisältö">
-            <script>
-                document.getElementById("sisältö").innerHTML = "<h4>Ladataan herkkuja...</hr>"
-
-                fetch("http://localhost:3001/api/herkut")
-                .then(res => res.json())
-                .then(js => console.log(js))
-            </script>
     </div>
+    <script>
+        async function fetchData()
+        {
+            document.getElementById("sisältö").innerHTML = "<h4>Ladataan herkkuja...</hr>"
+
+            var x = `<table><thead><th>Herkun nimi</th><th>tuotekoodi</th></thead><tbody>`
+            try{
+            
+                const response = await fetch("http://localhost:3001/api/herkut")
+                const herkkudata = await response.json()
+                await herkkudata.map(h=>{
+                    x += `<tr><td>${h.name}</td> <td>${h.id}</td></tr>`
+                    })
+                
+                x += `</tbody></table>`
+                document.getElementById("sisältö").innerHTML = x
+                } 
+                catch (error) {
+                    console.error("Error fetching data:",error)
+                }
+        }
+        fetchData()
+
+    </script>
 </center>
 </body>
 </html>
